--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.1"
+    "mongoose": "^7.4.1",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
